tests/typechecking/invalid/array_get_mismatch.ml
let a = Array.create 1 1.5 in
let b = 1 + a.(0) in
()
